k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-green
  labels:
    app: java-app
    version: green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-app
      version: green

  template:
    metadata:
      labels:
        app: java-app
        version: green

    spec:
      containers:
      - name: java-app
        image: 816069164153.dkr.ecr.us-east-1.amazonaws.com/dev-java-app:d7fb5dd
    #    image: nginx:wrongtag
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 2
          failureThreshold: 3

        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
