k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-blue
  labels:
    app: java-app
    version: blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-app
      version: blue

  template:
    metadata:
      labels:
        app: java-app
        version: blue

    spec:
      containers:
        - name: java-app
          image: 816069164153.dkr.ecr.us-east-1.amazonaws.com/dev-eks-app@sha256:655e3d86809a291ac290ccbe7d8fbc221ba2aa8e7b37b92806ba0c3882317123
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
