k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-canary-service
spec:
  selector:
    app: java-app-canary
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
