k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service

spec:
  selector:
    app: java-app
    version: blue

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
